--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         "name": "Héctor Laria",
         "affiliation": {
           "@type": "Organization",
-          "name": "INSTITUTION_NAME"
+          "name": "Universitat Autònoma de Barcelona"
         }
       },
       {
@@ -127,7 +127,7 @@
         "name": "Alexandra Gomez-Villa",
         "affiliation": {
           "@type": "Organization",
-          "name": "INSTITUTION_NAME"
+          "name": "Universitat Autònoma de Barcelona"
         }
       },
       {
@@ -135,7 +135,7 @@
         "name": "Jiang Qin",
         "affiliation": {
           "@type": "Organization",
-          "name": "INSTITUTION_NAME"
+          "name": "Harbin Institute of Technology"
         }
       },
       {
@@ -143,7 +143,7 @@
         "name": "Muhammad Atif Butt",
         "affiliation": {
           "@type": "Organization",
-          "name": "INSTITUTION_NAME"
+          "name": "Universitat Autònoma de Barcelona"
         }
       },
       {
@@ -151,7 +151,7 @@
         "name": "Bogdan Raducanu",
         "affiliation": {
           "@type": "Organization",
-          "name": "INSTITUTION_NAME"
+          "name": "Universitat Autònoma de Barcelona"
         }
       },
       {
@@ -159,7 +159,7 @@
         "name": "Javier Vazquez-Corral",
         "affiliation": {
           "@type": "Organization",
-          "name": "INSTITUTION_NAME"
+          "name": "Universitat Autònoma de Barcelona"
         }
       },
       {
@@ -167,7 +167,7 @@
         "name": "Joost van de Weijer",
         "affiliation": {
           "@type": "Organization",
-          "name": "INSTITUTION_NAME"
+          "name": "Universitat Autònoma de Barcelona"
         }
       },
       {
@@ -175,7 +175,7 @@
         "name": "Kai Wang",
         "affiliation": {
           "@type": "Organization",
-          "name": "INSTITUTION_NAME"
+          "name": "City University of Hong Kong"
         }
       }
     ],
@@ -312,7 +312,7 @@
                     </span>
 
                   <span class="link-block">
-                    <a href="#" target="_blank"
+                    <a href="https://github.com/hecoding/ColorWave" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
@@ -327,7 +327,7 @@
                   <span class="icon">
                     <i class="fas fa-play"></i>
                   </span>
-                  <span>Demo</span>
+                  <span>Demo (Soon)</span>
                 </a>
               </span>
             </div>
